templates/workload-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: YOUR_NAMESPACE
  labels:
    owner: TEAM_NAME
