templates/workload-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  namespace: YOUR_NAMESPACE
spec:
  selector:
    app: APP_NAME
  ports:
    - port: 80
      targetPort: 8080
      name: http
